Texto de prueba GitHub

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--Un texto de prueba-->
 <!DOCTYPE html>
 <html lang="es">
 
@@ -90,7 +91,7 @@
                                     <a class="compra-aqui" href="#">Compra aqui!</a>
                                 </div>
                             </li>
-                            <!-- Carousel controls -->
+                            <!-- Carousel controls-->
                             <a class="carousel-control-prev" href="#contenedor-articulo" data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon"></span>
                             </a>
