--- a/TechnoWorld-main/version_pro.html
+++ b/TechnoWorld-main/version_pro.html
@@ -20,29 +20,29 @@
 <body>
     <header>
         <h1 id="titulo">
-            Tipos de suscripciones
+            Suscríbete!
         </h1>
     </header>
     <section id="suscripciones">
         <ul class="lista">
             <div class="sus">
-                <li class="plata">
-                    <h1>Suscripcion plata</h1>
+                <li class="fsociety">
+                    <h1>Suscripcion FSociety</h1>
                     <ul>
                         <li>
-                            <p>Descuentos de 10%</p>
+                            <p class="par">Descuentos de 10%</p>
                         </li>
                         <li>
-                            <p>Garantías de 12 meses del producto</p>
+                            <p class="par">Garantías de 12 meses del producto</p>
                         </li>
                         <li>
-                            <p>Chance medio de sorteos</p>
+                            <p class="par">Chance medio de sorteos</p>
                         </li>
                         <li>
-                            <p>1 semana de prueba gratis</p>
+                            <p class="par">1 semana de prueba gratis</p>
                         </li>
                         <li>
-                            <p>Soporte de chat en vivo</p>
+                            <p class="par">Soporte de chat en vivo</p>
                         </li>
                     </ul>
                     <footer>
@@ -51,26 +51,26 @@
                 </li>
             </div>
             <div class="sus">
-                <li class="oro">
-                    <h1>Suscripcion oro</h1>
+                <li class="anonymous">
+                    <h1>Suscripcion Anonymous</h1>
                     <ul>
                         <li>
-                            <p>Descuentos de 15% a 20%</p>
+                            <p class="par">Descuentos de 15% a 20%</p>
                         </li>
                         <li>
-                            Garantía de 24 meses del producto
+                            <p class="par">Garantía de 24 meses del producto</p>
                         </li>
                         <li>
-                            <p>Chance alto de sorteos</p>
+                            <p class="par">Chance alto de sorteos</p>
                         </li>
                         <li>
-                            <p>1 semana de prueba gratis</p>
+                            <p class="par">1 semana de prueba gratis</p>
                         </li>
                         <li>
-                            Soporte de chat en vivo
+                            <p class="par">Soporte de chat en vivo</p>
                         </li>
                         <li>
-                            <p>Eliminacion de anuncios</p>
+                            <p class="par">Eliminacion de anuncios</p>
                         </li>
                     </ul>
                     <footer>
@@ -79,20 +79,20 @@
                 </li>
             </div>
             <div class="sus">
-                <li class="bronce">
-                    <h1>Suscripcion bronce</h1>
+                <li class="darkarmy">
+                    <h1>Suscripcion Dark Army</h1>
                     <ul>
                         <li>
-                            <p>Descuentos de 5%</p>
+                            <p class="par">Descuentos de 5%</p>
                         </li>
                         <li>
-                            <p>Garantía de 6 meses del producto</p>
+                            <p class="par">Garantía de 6 meses del producto</p>
                         </li>
                         <li>
-                            <p>Chance bajo para sorteos</p>
+                            <p class="par">Chance bajo para sorteos</p>
                         </li>
                         <li>
-                            <p>1 semana de prueba gratis</p>
+                            <p class="par">1 semana de prueba gratis</p>
                         </li>
                     </ul>
                     <footer>
@@ -102,6 +102,22 @@
             </div>
         </ul>
     </section>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <footer class="pie-pagina">
         <div class="grupo-1">
             <div class="box">
