Formulario registro incorporado a Inicio sesion

--- a/inicio_sesion.html
+++ b/inicio_sesion.html
@@ -53,11 +53,11 @@
                 <p class="formulario__input-error">El correo solo puede contener letras, numeros, puntos, guiones y guion bajo.</p>
             </div>
 
-            <!-- Grupo: Teléfono -->
-            <div class="formulario__grupo" id="grupo__telefono">
-                <label for="telefono" class="formulario__label">Contraseña</label>
+            <!-- Grupo: contraseña -->
+            <div class="formulario__grupo" id="grupo__clave">
+                <label for="clave" class="formulario__label">Contraseña</label>
                 <div class="formulario__grupo-input">
-                    <input type="password" class="formulario__input" name="telefono" id="telefono" placeholder="Escriba su contraseña">
+                    <input type="password" class="formulario__input" name="clave" id="clave" placeholder="Escriba su contraseña">
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
                 </div>
                 <p class="formulario__input-error">La contraseña es incorrecta</p>
@@ -66,7 +66,7 @@
             <div class="formulario__grupo formulario__grupo-btn-enviar">
                 <button type="submit" class="formulario__btn">Iniciar</button>
                 <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente, en breve nos pondremos en contacto contigo!</p>
-                <a href="#">¿Sin una cuenta? Regístrate aquí!</a>
+                <a href="registro.html">¿Sin una cuenta? Regístrate aquí!</a>
             </div>
         </form>
     </main>
