--- a/registro.html
+++ b/registro.html
@@ -64,7 +64,7 @@
             </div>
             
 
-            <!-- Grupo: Teléfono -->
+            <!-- Grupo: Contraseña -->
             <div class="formulario__grupo" id="grupo__clave">
                 <label for="clave" class="formulario__label">Contraseña</label>
                 <div class="formulario__grupo-input">
@@ -79,15 +79,15 @@
                 <div class="formulario__grupo-input">
                     <input type="number" placeholder="DD" name="fechanac" class="formulario__grupo" required>
                     <input type="number" placeholder="MM" name="fechanac" class="formulario__grupo" required>
-                    <input type="number" placeholder="YY" name="fechanac" class="formulario__grupo" required>
+                    <input type="number" placeholder="YYYY" name="fechanac" class="formulario__grupo" required>
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
                 </div>
-                <p class="formulario__input-error">La fecha de nacimiento solo puede contener letras, numeros, puntos, guiones y guion bajo.</p>
+                <p class="formulario__input-error">La fecha de nacimiento solo numeros.</p>
             </div>
             <div class="formulario__grupo formulario__grupo-btn-enviar">
                 <button type="submit" class="formulario__btn">Iniciar</button>
-                <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Registro exitoso, redirigiendo al portal...</p>
-                
+                <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Registro exitoso, Dirigete al inicio de sesion.</p>
+                <a href="inicio_sesion.html">Inicia sesion aqui!</a>
             </div>
         </form>
     </main>
