Modificacion texto boton submit

--- a/registro.html
+++ b/registro.html
@@ -85,7 +85,7 @@
                 <p class="formulario__input-error">La fecha de nacimiento solo numeros.</p>
             </div>
             <div class="formulario__grupo formulario__grupo-btn-enviar">
-                <button type="submit" class="formulario__btn">Iniciar</button>
+                <button type="submit" class="formulario__btn">Registrar</button>
                 <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Registro exitoso, Dirigete al inicio de sesion.</p>
                 <a href="inicio_sesion.html">Inicia sesion aqui!</a>
             </div>
