--- a/inicio_sesion.html
+++ b/inicio_sesion.html
@@ -42,7 +42,7 @@
         <p class="parrafo">Sé uno de nosotros!</p>
     </span>
     <main>
-        <form action="https://formspree.io/f/xvolqvdb" class="formulario" id="formulario" method="POST">
+        <form action="#" class="formulario" id="formulario" method="POST">
             <!-- Grupo: Correo Electronico -->
             <div class="formulario__grupo" id="grupo__correo">
                 <label for="correo" class="formulario__label">Correo Electrónico</label>
@@ -57,7 +57,7 @@
             <div class="formulario__grupo" id="grupo__clave">
                 <label for="clave" class="formulario__label">Contraseña</label>
                 <div class="formulario__grupo-input">
-                    <input type="password" class="formulario__input" name="clave" id="clave" placeholder="Escriba su contraseña">
+                    <input type="password" class="formulario__input" name="clave" id="clave" placeholder="Escriba su contraseña" required>
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
                 </div>
                 <p class="formulario__input-error">La contraseña es incorrecta</p>
