--- a/registro.html
+++ b/registro.html
@@ -73,16 +73,14 @@
                 </div>
                 <p class="formulario__input-error">La contraseña es incorrecta</p>
             </div>
-            <!-- Grupo: Fecha nacimiento -->
-            <div class="formulario__grupo" id="grupo__fechanac">
-                <label for="fechanac" class="formulario__label">Fecha nacimiento</label>
+            <!-- Grupo: Telefono -->
+            <div class="formulario__grupo" id="grupo__telefoo">
+                <label for="telefono" class="formulario__label">Telefono Movil</label>
                 <div class="formulario__grupo-input">
-                    <input type="number" placeholder="DD" name="fechanac" class="formulario__grupo" required>
-                    <input type="number" placeholder="MM" name="fechanac" class="formulario__grupo" required>
-                    <input type="number" placeholder="YYYY" name="fechanac" class="formulario__grupo" required>
+                    <input type="number" placeholder="numero telefono" name="telefono" id = "telefono" class="formulario__grupo" required>
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
                 </div>
-                <p class="formulario__input-error">La fecha de nacimiento solo numeros.</p>
+                <p class="formulario__input-error">El telefono debe tener solo numeros.</p>
             </div>
             <div class="formulario__grupo formulario__grupo-btn-enviar">
                 <button type="submit" class="formulario__btn">Registrar</button>
