Actualizacion id campo telefono

--- a/registro.html
+++ b/registro.html
@@ -74,7 +74,7 @@
                 <p class="formulario__input-error">La contraseña es incorrecta</p>
             </div>
             <!-- Grupo: Telefono -->
-            <div class="formulario__grupo" id="grupo__telefoo">
+            <div class="formulario__grupo" id="grupo__telefono">
                 <label for="telefono" class="formulario__label">Telefono Movil</label>
                 <div class="formulario__grupo-input">
                     <input type="number" placeholder="numero telefono" name="telefono" id = "telefono" class="formulario__grupo" required>
