--- a/registro.html
+++ b/registro.html
@@ -82,6 +82,9 @@
                 </div>
                 <p class="formulario__input-error">El telefono debe tener solo numeros.</p>
             </div>
+            <div class="formulario__mensaje" id="formulario__mensaje">
+                <p><i class="fas fa-exclamation-triangle"></i> <b>Error:</b> Por favor rellena el formulario correctamente. </p>
+            </div>
             <div class="formulario__grupo formulario__grupo-btn-enviar">
                 <button type="submit" class="formulario__btn">Registrar</button>
                 <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Registro exitoso, Dirigete al inicio de sesion.</p>
