--- a/registro.html
+++ b/registro.html
@@ -45,9 +45,9 @@
         <form action="https://formspree.io/f/xvolqvdb" class="formulario" id="formulario" method="POST">
             <!-- Grupo: Nombre completo -->
             <div class="formulario__grupo" id="grupo__nombre">
-                <label for="fullname" class="formulario__label">Nombre Completo</label>
+                <label for="nombre" class="formulario__label">Nombre Completo</label>
                 <div class="formulario__grupo-input">
-                    <input type="text" class="formulario__input" name="fullname" id="fullname" placeholder="Rodrigo Alonso Letelier Isami">
+                    <input type="text" class="formulario__input" name="nombre" id="nombre" placeholder="Rodrigo Alonso Letelier Isami">
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
                 </div>
                 <p class="formulario__input-error">El nombre solo puede contener letras, numeros, puntos, guiones y guion bajo.</p>
@@ -69,6 +69,15 @@
                 <label for="clave" class="formulario__label">Contraseña</label>
                 <div class="formulario__grupo-input">
                     <input type="password" class="formulario__input" name="clave" id="clave" placeholder="Escriba su contraseña">
+                    <i class="formulario__validacion-estado fas fa-times-circle"></i>
+                </div>
+                <p class="formulario__input-error">La contraseña es incorrecta</p>
+            </div>
+            <!-- Grupo: Contraseña -->
+            <div class="formulario__grupo" id="grupo__clave2">
+                <label for="nombre" class="formulario__label">Contraseña</label>
+                <div class="formulario__grupo-input">
+                    <input type="password" class="formulario__input" name="nombre" id="nombre" placeholder="Escriba su contraseña">
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
                 </div>
                 <p class="formulario__input-error">La contraseña es incorrecta</p>
