--- a/registro.html
+++ b/registro.html
@@ -68,14 +68,14 @@
             <div class="formulario__grupo" id="grupo__clave">
                 <label for="clave" class="formulario__label">Contraseña</label>
                 <div class="formulario__grupo-input">
-                    <input type="password" class="formulario__input" name="clave" id="clave" placeholder="Escriba su contraseña">
+                    <input type="password" class="formulario__input" name="nombre" id="nombre" placeholder="Escriba su contraseña">
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
                 </div>
                 <p class="formulario__input-error">La contraseña es incorrecta</p>
             </div>
             <!-- Grupo: Contraseña -->
             <div class="formulario__grupo" id="grupo__clave2">
-                <label for="nombre" class="formulario__label">Contraseña</label>
+                <label for="clave" class="formulario__label">Contraseña</label>
                 <div class="formulario__grupo-input">
                     <input type="password" class="formulario__input" name="nombre" id="nombre" placeholder="Escriba su contraseña">
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
