--- a/registro.html
+++ b/registro.html
@@ -76,16 +76,12 @@
             <div class="formulario__grupo" id="grupo__clave">
                 <label for="clave" class="formulario__label">Contraseña</label>
                 <div class="formulario__grupo-input">
-                    <input type="password" class="formulario__input" name="clave" id="clave" placeholder="Escriba su contraseña">
-
-                    <input type="password" class="formulario__input" name="clave" id="clave1" placeholder="Escriba su contraseña" required>
-
+                    <input type="password" class="formulario__input" name="clave" id="clave" placeholder="Escriba su contraseña" required>
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
                 </div>
                 <p class="formulario__input-error">La contraseña es incorrecta</p>
             </div>
-            <!-- Grupo: Telefono -->
-            <div class="formulario__grupo" id="grupo__telefoo">            <!-- Grupo: Contraseña 2 -->
+            <!-- Grupo: Contraseña 2 -->
             <div class="formulario__grupo" id="grupo__clave2">
                 <label for="clave2" class="formulario__label">Contraseña</label>
                 <div class="formulario__grupo-input">
@@ -93,7 +89,6 @@
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
                 </div>
                 <p class="formulario__input-error">Las contraseña no coinciden</p>
-            </div>
             </div>
             <!-- Grupo: Telefono -->
             <div class="formulario__grupo" id="grupo__telefono">
