--- a/registro.html
+++ b/registro.html
@@ -45,19 +45,11 @@
         <form action="https://formspree.io/f/xvolqvdb" class="formulario" id="formulario" method="POST">
             <!-- Grupo: Nombre completo -->
             <div class="formulario__grupo" id="grupo__nombre">
-                <label for="fullname" class="formulario__label">Nombre Completo</label>
-            </div>
-                <div class="formulario__grupo-input">
-                    <input type="text" class="formulario__input" name="fullname" id="fullname" placeholder="Rodrigo Alonso Letelier Isami">
-            </div>
                 <label for="nombre" class="formulario__label">Nombre Completo</label>
                 <div class="formulario__grupo-input">
-                    <input type="text" class="formulario__input" name="nombre" id="nombre" placeholder="Rodrigo Alonso Letelier Isami">
-            </div>
-            <div>
+                    <input type="text" class="formulario__input" name="nombre" id="nombre" placeholder="Rodrigo Alonso Letelier Isami" required>
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
-            </div>
-            <div>
+                </div>
                 <p class="formulario__input-error">El nombre solo puede contener letras, numeros, puntos, guiones y guion bajo.</p>
             </div>
             
@@ -65,7 +57,7 @@
             <div class="formulario__grupo" id="grupo__correo">
                 <label for="correo" class="formulario__label">Correo Electrónico</label>
                 <div class="formulario__grupo-input">
-                    <input type="email" class="formulario__input" name="correo" id="correo" placeholder="correo@correo.com">
+                    <input type="email" class="formulario__input" name="correo" id="correo" placeholder="correo@correo.com" required>
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
                 </div>
                 <p class="formulario__input-error">El correo solo puede contener letras, numeros, puntos, guiones y guion bajo.</p>
