--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <header>
         <nav id="menu">
-            <section id="contMenu">
+            <div id="contMenu">
                 <ul id="lista">
                     <li>
                         <a href="inicio_sesion.html"><i class="fa-solid fa-user"></i>Iniciar Sesión</a>
@@ -42,13 +42,11 @@
                         <a href="version_pro.html"><i class="fa-solid fa-crown"></i>Pro</a>
                     </li>
                 </ul>
-            </section>
+            </div>
         </nav>
         <div class="contenedor-titulo">
             <ul id="titulo">
-                <div>
                     <li class="titulotxt">TECHn <i class="fa-solid fa-globe"></i> World</li>
-                </div>
             </ul>
             <div class="servicios">
                 <p>Servicios Informáticos||Mantención||Seguridad||Rooteo||¡Y mucho más en TECHno World!</p>
@@ -56,10 +54,11 @@
 
         </div>
         <div id="productos">
+            <section class="textos-header">
+                <h1>Productos</h1>
+            </section>
             <section class="contenido-header">
-                <section class="textos-header">
-                    <h1>Productos</h1>
-                </section>
+                <h3>Las mejores marcas a los mejores precios!</h3>
                 <section>
                     <div id="contenedor-articulo" class="carousel slide" data-bs-ride="carousel">
                         <ol id="indicadores1" class="carousel-indicators">
@@ -93,12 +92,14 @@
                                 </div>
                             </li>
                             <!-- Carousel controls -->
+                            <li>
                             <a class="carousel-control-prev" href="#contenedor-articulo" data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon"></span>
                             </a>
                             <a class="carousel-control-next" href="#contenedor-articulo" data-bs-slide="next">
                                 <span class="carousel-control-next-icon"></span>
                             </a>
+                        </li>
                         </ul>
                     </div>
                     <div id="contenedor-articulo2" class="carousel slide" data-bs-ride="carousel">
@@ -251,9 +252,9 @@
         </div>
     </header>
     <section class="contenedor3">
+    <h1>Actualízate con nosotros</h1>
         <section class="contenedortext">
-            <h1>Actualízate con nosotros</h1>
-            <p>Contamos con marcas reconocidas!</p>
+            <h2>Contamos con marcas reconocidas!</h2>
             <img src="imagenes/redragon-logo-1.png" alt="">
             <img src="imagenes/Corsair-Logo-2020.png" alt="">
             <img src="imagenes/coolermaster.png" alt="">
