--- a/registro.html
+++ b/registro.html
@@ -86,7 +86,7 @@
             <div class="formulario__grupo" id="grupo__telefono">
                 <label for="telefono" class="formulario__label">Telefono Movil</label>
                 <div class="formulario__grupo-input">
-                    <input type="number" placeholder="numero telefono" name="telefono" id = "telefono" class="formulario__grupo" required>
+                    <input type="text" placeholder="numero telefono" name="telefono" id = "telefono" class="formulario__grupo" required>
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
                 </div>
                 <p class="formulario__input-error">El telefono debe tener solo numeros.</p>
