--- a/index.html
+++ b/index.html
@@ -47,11 +47,8 @@
         <div class="contenedor-titulo">
             <ul id="titulo">
                     <li class="titulotxt">TECHn <i class="fa-solid fa-globe"></i> World</li>
-            </ul>
-            <div class="servicios">
-                <p>Servicios Informáticos||Mantención||Seguridad||Rooteo||¡Y mucho más en TECHno World!</p>
-            </div>
-
+                    <li class="servicios">Servicios Informáticos||Mantención||Seguridad||Rooteo||¡Y mucho más en TECHno World!</li>
+            </ul>                
         </div>
         <div id="productos">
             <section class="textos-header">
