--- a/version_pro.html
+++ b/version_pro.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <nav id="menu">
-            <section id="contMenu">
+            <div id="contMenu">
                 <ul id="lista">
                     <li>
                         <i class="fa-solid fa-house"></i>
@@ -43,7 +43,7 @@
                         <a href="#">Ajustes</a>
                     </li>
                 </ul>
-            </section>
+            </div>
         </nav>
         <h1 id="titulo">
             Suscríbete!
@@ -51,7 +51,6 @@
     </header>
     <section id="suscripciones">
         <ul class="lista">
-            <div class="sus">
                 <li class="fsociety">
                     <h1>Suscripcion FSociety</h1>
                     <ul>
@@ -72,11 +71,9 @@
                         </li>
                     </ul>
                     <footer>
-                        <a href="formulario_tarjeta.html">7000CLP/MES</a>
+                        <a href="#">7000CLP/MES</a>
                     </footer>
                 </li>
-            </div>
-            <div class="sus">
                 <li class="anonymous">
                     <h1>Suscripcion Anonymous</h1>
                     <ul>
@@ -103,8 +100,6 @@
                         <a href="formulario_tarjeta.html">12000CLP/MES</a>
                     </footer>
                 </li>
-            </div>
-            <div class="sus">
                 <li class="darkarmy">
                     <h1>Suscripcion Dark Army</h1>
                     <ul>
@@ -124,8 +119,7 @@
                     <footer>
                         <a href="formulario_tarjeta.html">4000CLP/MES</a>
                     </footer>
-                </li>
-            </div>
+                </li> 
         </ul>
     </section>
     <br>
