--- a/registro.html
+++ b/registro.html
@@ -129,7 +129,7 @@
             <small>&copy; 2021 <b>TECHn <i class="fa-solid fa-globe"></i> World</b> - Todos los Derechos Reservados.</small>
         </div>
     </footer>
-    <script src="js/app.js"></script>
+    <script src="js/register.js"></script>
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/0113bec5a9.js" crossorigin="anonymous"></script>
 </body>
