--- a/version_pro.html
+++ b/version_pro.html
@@ -52,6 +52,7 @@
     <section id="suscripciones">
         <ul class="lista">
                 <li class="fsociety">
+                    <i class="fa-solid fa-medal"></i>
                     <h1>Suscripcion FSociety</h1>
                     <ul>
                         <li>
@@ -75,6 +76,7 @@
                     </footer>
                 </li>
                 <li class="anonymous">
+                    <i class="fa-solid fa-trophy"></i>
                     <h1>Suscripcion Anonymous</h1>
                     <ul>
                         <li>
@@ -101,6 +103,7 @@
                     </footer>
                 </li>
                 <li class="darkarmy">
+                    <i class="fa-solid fa-award"></i>
                     <h1>Suscripcion Dark Army</h1>
                     <ul>
                         <li>
