funcion para redirigir a la pag principal dsp de logearse

--- a/inicio_sesion.html
+++ b/inicio_sesion.html
@@ -64,7 +64,7 @@
                 <a href="#">¿Olvidaste tu contraseña?</a>
             </div>
             <div class="formulario__grupo formulario__grupo-btn-enviar">
-                <button type="submit" class="formulario__btn">Iniciar</button>
+                <button type="submit" class="formulario__btn" onclick="redirigir()">Iniciar</button>
                 <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Inicio de sesion exitoso!</p>
                 <a href="registro.html">¿Sin una cuenta? Regístrate aquí!</a>
             </div>
