--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a href="#"><i class="fa-solid fa-gear"></i>Ajustes</a>
                     </li>
                     <li>
-                        <a href="version_pro.html"><i class="fa-solid fa-crown"></i>Pro</a>
+                        <a class="corona" href="version_pro.html"><i class="fa-solid fa-crown"></i>Pro</a>
                     </li>
                 </ul>
             </div>
