--- a/registro.html
+++ b/registro.html
@@ -47,7 +47,7 @@
             <div class="formulario__grupo" id="grupo__nombre">
                 <label for="nombre" class="formulario__label">Nombre Completo</label>
                 <div class="formulario__grupo-input">
-                    <input type="text" class="formulario__input" name="nombre" id="nombre" placeholder="Rodrigo Alonso Letelier Isami" required>
+                    <input type="text" class="formulario__input" name="nombre" id="nombre" placeholder="Rodrigo Alonso Letelier Isami">
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
                 </div>
                 <p class="formulario__input-error">El nombre solo puede contener letras, numeros, puntos, guiones y guion bajo.</p>
@@ -57,7 +57,7 @@
             <div class="formulario__grupo" id="grupo__correo">
                 <label for="correo" class="formulario__label">Correo Electrónico</label>
                 <div class="formulario__grupo-input">
-                    <input type="email" class="formulario__input" name="correo" id="correo" placeholder="correo@correo.com" required>
+                    <input type="email" class="formulario__input" name="correo" id="correo" placeholder="correo@correo.com">
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
                 </div>
                 <p class="formulario__input-error">El correo solo puede contener letras, numeros, puntos, guiones y guion bajo.</p>
@@ -68,7 +68,7 @@
             <div class="formulario__grupo" id="grupo__clave">
                 <label for="clave" class="formulario__label">Contraseña</label>
                 <div class="formulario__grupo-input">
-                    <input type="password" class="formulario__input" name="clave" id="clave" placeholder="Escriba su contraseña" required>
+                    <input type="password" class="formulario__input" name="clave" id="clave" placeholder="Escriba su contraseña">
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
                 </div>
                 <p class="formulario__input-error">La contraseña es incorrecta</p>
@@ -77,7 +77,7 @@
             <div class="formulario__grupo" id="grupo__clave2">
                 <label for="clave2" class="formulario__label">Contraseña</label>
                 <div class="formulario__grupo-input">
-                    <input type="password" class="formulario__input" name="clave2" id="clave2" placeholder="Escriba su contraseña" required>
+                    <input type="password" class="formulario__input" name="clave2" id="clave2" placeholder="Escriba su contraseña">
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
                 </div>
                 <p class="formulario__input-error">Las contraseña no coinciden</p>
@@ -86,7 +86,7 @@
             <div class="formulario__grupo" id="grupo__telefono">
                 <label for="telefono" class="formulario__label">Telefono Movil</label>
                 <div class="formulario__grupo-input">
-                    <input type="text" placeholder="numero telefono" name="telefono" id = "telefono" class="formulario__grupo" required>
+                    <input type="text" placeholder="numero telefono" name="telefono" id = "telefono" class="formulario__grupo">
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
                 </div>
                 <p class="formulario__input-error">El telefono debe tener solo numeros.</p>
@@ -129,7 +129,9 @@
             <small>&copy; 2021 <b>TECHn <i class="fa-solid fa-globe"></i> World</b> - Todos los Derechos Reservados.</small>
         </div>
     </footer>
-    <script src="js/register.js"></script>
+    <script src="js/validator_login.js"></script>
+    <script>src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"</script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/0113bec5a9.js" crossorigin="anonymous"></script>
 </body>
