--- a/registro.html
+++ b/registro.html
@@ -131,7 +131,7 @@
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
-    <script src="/js/registro_jquery.js"></script>
+    <script src="js/registro_jquery.js"></script>
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/0113bec5a9.js" crossorigin="anonymous"></script>
 </body>
