--- a/registro.html
+++ b/registro.html
@@ -68,7 +68,7 @@
             <div class="formulario__grupo" id="grupo__clave">
                 <label for="clave" class="formulario__label">Contraseña</label>
                 <div class="formulario__grupo-input">
-                    <input type="password" class="formulario__input" name="clave1" id="clave" placeholder="Escriba su contraseña" >
+                    <input type="password" class="formulario__input" name="pw1" id="clave" placeholder="Escriba su contraseña" >
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
                 </div>
                 <p class="formulario__input-error">La contraseña es incorrecta</p>
@@ -77,7 +77,7 @@
             <div class="formulario__grupo" id="grupo__clave2">
                 <label for="clave2" class="formulario__label">Contraseña</label>
                 <div class="formulario__grupo-input">
-                    <input type="password" class="formulario__input" name="clave2" id="clave2" placeholder="Escriba su contraseña" >
+                    <input type="password" class="formulario__input" name="pw2" id="clave2" placeholder="Escriba su contraseña" >
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
                 </div>
                 <p class="formulario__input-error">Las contraseña no coinciden</p>
