Bootstrap Carusel +JSON

--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -38,27 +38,9 @@
     </header>
     <div class="nosotros">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="imagenes/Gigachad-removebg-preview.png" class="d-block w-100" alt="...">
-                    <h1>Cristian dev 1</h1>
-                    <p>Estudiante de Ing. inf, desarrollador de la pagina web TECHn<i class="fa-solid fa-globe"></i> World Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt sit quam, earum minus in eaque quaerat impedit nemo ipsum. Libero,
-                        sint. Id saepe, ea laudantium dolore ut necessitatibus cumque explicabo sapiente numquam quo, praesentium ipsa aliquid exercitationem adipisci quia doloremque earum quasi molestias pariatur neque officiis excepturi est? Porro,
-                        veniam.
-                    </p>
-                </div>
-                <div class="carousel-item">
-                    <img src="imagenes/Gigachad-removebg-preview.png" class="d-block w-100" alt="...">
-                    <h1>Yerko dev 2</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, perferendis! Ab illo, animi veniam neque error delectus harum distinctio tenetur ut necessitatibus. Eaque maxime quis reiciendis aut dolorem iste doloremque modi voluptates
-                        alias ab ducimus accusantium, cum impedit reprehenderit doloribus cumque possimus tempore fugiat deleniti natus. Fuga quae mollitia quo!</p>
-                </div>
-                <div class="carousel-item">
-                    <img src="imagenes/Gigachad-removebg-preview.png" class="d-block w-100" alt="...">
-                    <h1>Rodrigo dev 3</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem laboriosam libero in ex quisquam recusandae maxime praesentium magni eius, nam provident inventore est at pariatur laborum reiciendis facilis nostrum officiis impedit doloremque?
-                        Explicabo, nostrum dolor, repellat molestiae numquam voluptatibus dignissimos iure at, impedit libero veritatis. Tenetur adipisci labore tempora vero.</p>
-                </div>
+            <div class="carousel-inner" id="items">
+                <!-- Insertar datos con json -->
+                
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -102,6 +84,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/0113bec5a9.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="/js/api.js"></script>
 </body>
 
 </html>
