--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Gigabyte</h5>
                                     <p>Gigabyte RTX 3090 Gaming OC 24G</p>
-                                    <a class="compra-aqui" href="#">Compra aqui!</a>
+                                    <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                             <li class="carousel-item">
@@ -73,7 +73,7 @@
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Gigabyte</h5>
                                     <p>Graphic Card Gigabyte AORUS GeForce GTX 1080 Ti 12GB GV</p>
-                                    <a class="compra-aqui" href="#">Compra aqui!</a>
+                                    <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                             <li class="carousel-item">
@@ -81,7 +81,7 @@
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Gigabyte</h5>
                                     <p>Gigabyte RTX 3090 Gaming OC 24G</p>
-                                    <a class="compra-aqui" href="#">Compra aqui!</a>
+                                    <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                             <!-- Carousel controls -->
@@ -108,21 +108,21 @@
                                 <img src="imagenes/ram1.png" class="d-block w-20" alt="Slide 1">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>RAM Memory Corsair Vengeance, 16 Gb </p>
-                                    <a class="compra-aqui" href="#">Compra aqui!</a>
+                                    <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                             <li class="carousel-item">
                                 <img src="imagenes/ram2-.png" class="d-block w-20" alt="Slide 2">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>RAM Memory Impact 8GB 1 HyperX</p>
-                                    <a class="compra-aqui" href="#">Compra aqui!</a>
+                                    <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                             <li class="carousel-item">
                                 <img src="imagenes/ram3.png" class="d-block w-20" alt="Slide 3">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>A-DATA XPG Gammix D30</p>
-                                    <a class="compra-aqui" href="#">Compra aqui!</a>
+                                    <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                         </ul>
@@ -144,21 +144,21 @@
                                 <img src="imagenes/mouse1.png" class="d-block w-20" alt="Slide 1">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>Mouse Gaming MMO Logitech G600</p>
-                                    <a class="compra-aqui" href="#">Compra aqui!</a>
+                                    <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                             <li class="carousel-item">
                                 <img src="imagenes/mouse2.png" class="d-block w-20" alt="Slide 2">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>VicTsing Wireless Mouse 2.4G</p>
-                                    <a class="compra-aqui" href="#">Compra aqui!</a>
+                                    <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                             <li class="carousel-item">
                                 <img src="imagenes/mouse3.png" class="d-block w-20" alt="Slide 3">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>Redragon M908 Impact RGB</p>
-                                    <a class="compra-aqui" href="#">Compra aqui!</a>
+                                    <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                         </ul>
@@ -180,21 +180,21 @@
                                 <img src="imagenes/teclado1.png" class="d-block w-20" alt="Slide 1">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>Redragon Kumara K552 White</p>
-                                    <a class="compra-aqui" href="#">Compra aqui!</a>
+                                    <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                             <li class="carousel-item">
                                 <img src="imagenes/teclado2.png" class="d-block w-20" alt="Slide 2">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>Cooler Master CK530 V2</p>
-                                    <a class="compra-aqui" href="#">Compra aqui!</a>
+                                    <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                             <li class="carousel-item">
                                 <img src="imagenes/teclado3.png" class="d-block w-20" alt="Slide 3">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>Cooler Master CK530 V2</p>
-                                    <a class="compra-aqui" href="#">Compra aqui!</a>
+                                    <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                         </ul>
@@ -216,21 +216,21 @@
                                 <img src="imagenes/camara.png" class="d-block w-20" alt="Slide 1">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>Web cam Reddragon</p>
-                                    <a class="compra-aqui" href="#">Compra aqui!</a>
+                                    <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                             <li class="carousel-item">
                                 <img src="imagenes/microfono.png" class="d-block w-20" alt="Slide 2">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>Reddragon Blazar GM300</p>
-                                    <a class="compra-aqui" href="#">Compra aqui!</a>
+                                    <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                             <li class="carousel-item">
                                 <img src="imagenes/auriculares.png" class="d-block w-20" alt="Slide 3">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>HyperX Cloud</p>
-                                    <a class="compra-aqui" href="#">Compra aqui!</a>
+                                    <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                         </ul>
