--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         <div class="grupo-1">
             <div class="box">
                 <figure>
-                    <a href="index.html">
+                    <a href="index2.html">
                         TECHn <i class="fa-solid fa-globe"></i> World
                     </a>
                 </figure>
