--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -17,7 +17,7 @@
             <section id="contMenu">
                 <ul id="lista">
                     <li>
-                        <a href="index.html"> <i class="fa-solid fa-house"></i>Inicio</a>
+                        <a href="index2.html"> <i class="fa-solid fa-house"></i>Inicio</a>
                     </li>
                     <li>
 
@@ -56,7 +56,7 @@
         <div class="grupo-1">
             <div class="box">
                 <figure>
-                    <a href="index.html">
+                    <a href="index2.html">
                         TECHn <i class="fa-solid fa-globe"></i> World
                     </a>
                 </figure>
