--- a/version_pro.html
+++ b/version_pro.html
@@ -25,7 +25,7 @@
                 <ul id="lista">
                     <li>
                         <i class="fa-solid fa-house"></i>
-                        <a href="index.html">Inicio</a>
+                        <a href="index2.html">Inicio</a>
                     </li>
                     <li>
                         <i class="fa-solid fa-user"></i>
@@ -145,7 +145,7 @@
         <div class="grupo-1">
             <div class="box">
                 <figure>
-                    <a href="index.html">
+                    <a href="index2.html">
                         TECHn <i class="fa-solid fa-globe"></i> World
                     </a>
                 </figure>
