--- a/index2.html
+++ b/index2.html
@@ -21,27 +21,26 @@
 </head>
 <body>
     <header>
-        <nav id="menu">
-            <div id="contMenu">
-                <ul id="lista">
-                    <li>
-                        <a href="index.html"><i class="fa-solid fa-power-off"></i>Log out</a>
-                    </li>
-                    <li>
-                       
-                        <a href="contacto.html" target="_blank"><i class="fa-solid fa-phone"></i>Contacto</a></li>
-                    <li>
-                        <a href="quienes_somos.html"><i class="fa-solid fa-users"></i>Quiénes somos</a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa-solid fa-gear"></i>Ajustes</a>
-                    </li>
-                    <li>
-                        <a href="version_pro.html"><i class="fa-solid fa-crown"></i>Pro</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <div class="container">
+		    <div class="btn-menu">
+			    <label for="btn-menu"><i class="fa-solid fa-bars"></i></label>
+		    </div>
+		</div>
+	<div class="capa"></div>
+<input type="checkbox" id="btn-menu">
+<div class="container-menu">
+	<div class="cont-menu">
+		<nav>
+            <a href="inicio_sesion.html"><i class="fa-solid fa-user icono"></i>Iniciar Sesión</a>			
+            <a href="contacto.html" target="_blank"><i class="fa-solid fa-phone icono"></i>Contacto</a>
+            <a href="quienes_somos.html"><i class="fa-solid fa-users icono"></i>Quiénes somos</a>
+            <a href="#"><i class="fa-solid fa-gear icono"></i>Ajustes</a>
+            <a class="corona" href="version_pro.html"><i class="fa-solid fa-crown icono"></i>Pro</a>
+            <i id="finalmenu" class="fa-solid fa-globe"></i>
+		</nav>
+		<label for="btn-menu"><i class="fa-solid fa-xmark"></i></label>
+	</div>
+</div>
         <div class="contenedor-titulo">
             <ul id="titulo">
                     <li class="titulotxt">TECHn <i class="fa-solid fa-globe"></i> World</li>
